tests/fail/union_partial_init.tk
union U {
    full: u64,
    part: u32
}

fn main() {
    auto u = U(part = 100);
}
